--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
         stage('Checkout'){
            steps {
                // git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', 
-                url: 'https://github.com/karthikpuvvada/Jenkins-Zero-To-Hero/python-jenkins-argocd-k8s',
+                url: 'https://github.com/karthikpuvvada/Jenkins-Zero-To-Hero/',
                 branch: 'main'
            }
         }
@@ -21,7 +21,7 @@ pipeline {
                 script{
                     sh '''
                     echo 'Buid Docker Image'
-                    docker build -t abhishekf5/cicd-e2e:${BUILD_NUMBER} .
+                    docker build -t abhishekf5/cicd-e2e:123 .
                     '''
                 }
             }
@@ -32,7 +32,7 @@ pipeline {
                 script{
                     sh '''
                     echo 'Push to Repo'
-                    docker push abhishekf5/cicd-e2e:${BUILD_NUMBER}
+                    docker push abhishekf5/cicd-e2e:123
                     '''
                 }
             }
@@ -41,7 +41,7 @@ pipeline {
         stage('Checkout K8S manifest SCM'){
             steps {
                 //git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', 
-                url: 'https://github.com/karthikpuvvada/Jenkins-Zero-To-Hero/python-jenkins-argocd-k8s',
+                url: 'https://github.com/karthikpuvvada/Jenkins-Zero-To-Hero/',
                 branch: 'main'
             }
         }
