--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -11,8 +11,7 @@ pipeline {
         stage('Checkout'){
            steps {
                // git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', 
-                url: 'https://github.com/karthikpuvvada/Jenkins-Zero-To-Hero/',
-                branch: 'main'
+               git branch: 'main', url: 'https://github.com/KarthikPuvvada/Jenkins-Zero-To-Hero/'
            }
         }
 
@@ -41,8 +40,7 @@ pipeline {
         stage('Checkout K8S manifest SCM'){
             steps {
                 //git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', 
-                url: 'https://github.com/karthikpuvvada/Jenkins-Zero-To-Hero/',
-                branch: 'main'
+               git branch: 'main', url: 'https://github.com/KarthikPuvvada/Jenkins-Zero-To-Hero/'
             }
         }
         
