--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -49,10 +49,10 @@ pipeline {
                 script{
                     //withCredentials([usernamePassword(credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
                         sh '''
-                        cat /deploy/deploy.yaml
-                        sed -i '' "s/32/${BUILD_NUMBER}/g" /deploy/deploy.yaml
-                        cat /deploy/deploy.yaml
-                        git add /deploy/deploy.yaml
+                        cat python-jenkins-argocd-k8s/deploy/deploy.yaml
+                        sed -i '' "s/32/${BUILD_NUMBER}/g" python-jenkins-argocd-k8s//deploy/deploy.yaml
+                        cat python-jenkins-argocd-k8s//deploy/deploy.yaml
+                        git add python-jenkins-argocd-k8s//deploy/deploy.yaml
                         git commit -m 'Updated the deploy yaml | Jenkins Pipeline'
                         git remote -v
                         git push https://github.com/karthikpuvvada/Jenkins-Zero-To-Hero/python-jenkins-argocd-k8s.git HEAD:main
