--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
                 script{
                     sh '''
                     echo 'Buid Docker Image'
-                    docker build -t abhishekf5/cicd-e2e:123 -f python-jenkins-argocd-k8s/Dockerfile .
+                    docker build -t abhishekf5/ultimate-cicd:123 -f python-jenkins-argocd-k8s/Dockerfile .
                     '''
                 }
             }
@@ -31,7 +31,7 @@ pipeline {
                 script{
                     sh '''
                     echo 'Push to Repo'
-                    docker push abhishekf5/cicd-e2e:123
+                    docker push abhishekf5/ultimate-cicd:123
                     '''
                 }
             }
