--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
            }
         }
 
-        stage('Build Docker'){
+        stage('Build Docker1'){
             steps{
                 script{
                     sh '''
